--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
