--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/socket.io-client": "^1.4.36",
     "@uiw/codemirror-extensions-langs": "^4.21.21",
     "@uiw/codemirror-theme-dracula": "^4.21.21",
     "@uiw/codemirror-themes": "^4.21.21",
@@ -28,6 +30,8 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.321.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -37,6 +41,7 @@
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.3",
     "react-router-dom": "^6.22.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
