--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/socket.io": "^3.0.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,7 +25,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
